# rust_midi_synth

./: .gitignore  Cargo.toml  README.md  memory.x  midi_test.mid
.cargo/: config.toml
old_project/: .gitignore  Cargo.toml  README.md
old_project/src/: main.rs
src/: data.rs  main.rs  sound_profiles.rs
