[package]
name = "rust_midi_synth"
version = "0.1.0"
authors = ["juhotuho10"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]

midly = { version = "=0.5.3", default-features = false}
esp32-hal = { version = "0.18.1", features = ["rt"] }
panic-halt = "1.0.0"
esp-println = { version = "0.13.0", features = ["esp32", "log"] }
heapless = "0.8.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
