[package]
name = "rust_midi_synth"
version = "0.1.0"
authors = ["juhotuho10"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
critical-section = "1.2.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0.0", features = ["esp32", "unstable"] }
esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }
log = { version = "0.4.21" }
midly = { version = "=0.5.3", default-features = false}
heapless = "0.9.2"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 0     # 2 = full, 1 = partial, 0 = none
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 3     # might be faster on 3 or 2, 3 seems more consistent though, 2 is sometimes randomly slower
overflow-checks  = false