[package]
name = "rust_midi_synth"
version = "0.1.0"
authors = ["juhotuho10"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# embassy-sync = "0.6.2"
# embassy-time = "0.4.0"
esp-hal-embassy =  { version = "0.6.0", features = ["esp32"] }
panic-halt = "1.0.0"

# embassy-executor = { version = "0.7.0", features = ["nightly"] }
# esp32-hal = { version = "0.15.0", features = ["rt"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
